--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
     </div>
 
     <script src="libs/typeit.js"></script>
-    <script src="libs/firebase-app.js"></script>
-    <script src="libs/firebase-firestore.js"></script>
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/config.js"></script>
     <script src="js/data.js"></script>
     <script src="app.js"></script>
